Removed overflow scrolling touch, and set overflow to auto, due to scrolling bug on iphone   #132

--- a/_includes/global.css
+++ b/_includes/global.css
@@ -879,9 +879,8 @@ aside  li:hover:after  {
   /* set scrolling on short height browsers */
 @media only screen and (min-height:20px)  and (max-height:520px) {
   #subnav.show-nav {
-    overflow-y:scroll;
-    height:420px;
-    -webkit-overflow-scrolling: touch;
+    overflow:auto; 
+    height:340px;
   }
 }  
 
